Bugfixed routing (missing /)

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
+  "homepage": "https://github.com/AntGa/FrontEndMentor-Submissions",
   "name": "frontendmentor-submissions",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1"
